# chat-app

./: .env  .env.mobile  .gitignore  .prettierrc  bun.lockb  cat.svelte  houdini.config.js  houdini.config.ts  justfile  package.json  schema.graphql  svelte.config.js  tailwind.config.js  tsconfig.json  uno.config.ts  unplugin-icons.config.ts  vite.config.ts  vite.config.ts.timestamp-1683701303897-18338e2a61412.mjs
build-tauri/: app.html  index.html
build-tauri/_app/: version.json
build-web/client/_app/: version.json
build-web/server/: index.js  index.js.map  manifest.js  manifest.js.map
build-web/server/chunks/: 0-ef4595a7.js  0-ef4595a7.js.map  1-de82f770.js  1-de82f770.js.map  2-c52b19c3.js  2-c52b19c3.js.map  3-906eb244.js  3-906eb244.js.map  4-53a574fd.js  4-53a574fd.js.map  _error.svelte-26bb5b3f.js  _error.svelte-26bb5b3f.js.map  _layout.svelte-02c79e48.js  _layout.svelte-02c79e48.js.map  _layout.svelte-963bb110.js  _layout.svelte-963bb110.js.map  _page.svelte-447ffc3f.js  _page.svelte-447ffc3f.js.map  _page.svelte-66513a29.js  _page.svelte-66513a29.js.map  index-144530ea.js.map
src/: App.css  App.scss  app.d.ts  app.html  client.ts  fonts.css  hooks.server.ts  thingo.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Note.svelte  Profile.svelte  Spinner.svelte  Status.svelte  StatusAvatar.svelte  auth.ts  graphql.ts  state.ts  tauri.ts  typemagic.ts  utils.ts  yayql.ts  zod.ts
src/lib/graphql/: AddFriends.gql  Conversations.gql  DeleteMessage.gql  Friends.gql  (+14 more)
src/routes/: +error.svelte  +layout.svelte  +page.svelte
(+110 files in other folders)
