[package]
name = "netherite-chat-app"
version = "0.1.0"
description = "The netherite.chat desktop & mobile app."
authors = ["nothen@netherite.chat", "mizu@netherite.chat"]
license = "All Rights Reserved"
repository = "TeamNetherite/chat"
default-run = "netherite-chat-app"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.0", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
mobile = []
desktop = []
